@@ -1,4 +1,4 @@
-/* $Header: /cvsroot/pgsql/src/interfaces/ecpg/preproc/Attic/preproc.y,v 1.235 2003/06/20 12:00:59 meskes Exp $ */
+/* $Header: /cvsroot/pgsql/src/interfaces/ecpg/preproc/Attic/preproc.y,v 1.236 2003/06/20 13:36:34 meskes Exp $ */
 
 /* Copyright comment */
 %{
@@ -674,7 +674,10 @@ stmt:  AlterDatabaseSetStmt		{ output_statement($1, 0, connection); }
 		}
 		| ECPGFree
 		{
-			fprintf(yyout, "{ ECPGdeallocate(__LINE__, \"%s\");", $1);
+			if (compat == ECPG_COMPAT_INFORMIX)
+				fprintf(yyout, "{ ECPGdeallocate_informix(__LINE__, \"%s\");", $1);
+			else
+				fprintf(yyout, "{ ECPGdeallocate(__LINE__, \"%s\");", $1);
 
 			whenever_action(2);
 			free($1);
